--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,13 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Series</title>
-</head>
-<body>
-<h1>Coucou</h1>
-</body>
-</html>
+
+{% extends 'foundation.html.twig' %}
+
+{% block body %}
+<h1>Ceci est la page d'accueil !</h1>
+{% endblock %}
+
+{% block title %}{{ parent() }}{% endblock %}
